@@ -1,3 +1,8 @@
+2005-06-24  Tom Tromey  <tromey@redhat.com>
+
+	* bytecode/verify.cc (verify_instructions_0): Correctly handle
+	situation where PC falls off end.
+
 2005-05-17  Tom Tromey  <tromey@redhat.com>
 
 	* bytecode/generate.cc (visit_method): Updated.
